--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,9 @@
-Datepickers a little less ugly
-Homepage works for newly registered users
 Nodemailer implemented
+Homepage works for newly registered users
+Plus button on my requests page redirects to new request form?
+Plus button on my requests page redirects to new member form?
+Stock photos in there
+
 Finalize front-end design, animations and transitions
 Polish up & optimize project codebase, add useful comments
 QA and user testing. Initial edits
@@ -13,7 +16,6 @@ When first date selected, second date matches initially
 Datepickers *much* less ugly
 Implement factories to download all coop data and uncompleted requests --> faster load times!
 Add feature allowing Users to cancel Requests they have committed to (leaving the Request open again).
-Add feature allowing Users to invite new members to their Coop, and allowing new users to create an account and join an existing Coop.
 Add feature allowing new Users to create a new Coop.
 Add feature allowing cooperatives to keep track of and exchange points in exchange for childcare help.
 Add address, kids names and ages to user objects
